# papercheck

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/papercheck/: __init__.py  __main__.py  cli.py  config.py  engine.py  fixer.py  html_report.py  models.py  pack.py  parser.py  pdf_check.py  report.py  suggest.py  watcher.py
src/papercheck/checks/: __init__.py  content.py  cross_refs.py  figures.py  language.py  math.py  references.py  reproducibility.py  structure.py  typography.py  venue.py
tests/: test_config.py  test_fixer.py  test_html_report.py  test_integration.py  test_pack.py  test_parser.py  test_pdf_check.py  test_suggest.py  test_watcher.py
tests/fixtures/: clean_paper.tex  clean_refs.bib  refs.bib  sample_paper.tex
